@@ -4322,6 +4322,214 @@ block|}
 block|}
 specifier|public
 name|void
+name|testPublishTransactionWithBranch
+parameter_list|()
+throws|throws
+name|Exception
+block|{
+try|try
+block|{
+name|FileSystemResolver
+name|resolver
+init|=
+operator|new
+name|FileSystemResolver
+argument_list|()
+decl_stmt|;
+name|resolver
+operator|.
+name|setName
+argument_list|(
+literal|"test"
+argument_list|)
+expr_stmt|;
+name|resolver
+operator|.
+name|setSettings
+argument_list|(
+name|settings
+argument_list|)
+expr_stmt|;
+name|resolver
+operator|.
+name|addIvyPattern
+argument_list|(
+literal|"test/repositories/1/[organisation]/[module]/[branch]/[revision]/[artifact].[ext]"
+argument_list|)
+expr_stmt|;
+name|resolver
+operator|.
+name|addArtifactPattern
+argument_list|(
+literal|"test/repositories/1/[organisation]/[module]/[branch]/[revision]/[artifact]-[revision].[ext]"
+argument_list|)
+expr_stmt|;
+name|ModuleRevisionId
+name|mrid
+init|=
+name|ModuleRevisionId
+operator|.
+name|newInstance
+argument_list|(
+literal|"myorg"
+argument_list|,
+literal|"mymodule"
+argument_list|,
+literal|"mybranch"
+argument_list|,
+literal|"myrevision"
+argument_list|)
+decl_stmt|;
+name|Artifact
+name|ivyArtifact
+init|=
+operator|new
+name|DefaultArtifact
+argument_list|(
+name|mrid
+argument_list|,
+operator|new
+name|Date
+argument_list|()
+argument_list|,
+literal|"ivy"
+argument_list|,
+literal|"ivy"
+argument_list|,
+literal|"xml"
+argument_list|)
+decl_stmt|;
+name|Artifact
+name|artifact
+init|=
+operator|new
+name|DefaultArtifact
+argument_list|(
+name|mrid
+argument_list|,
+operator|new
+name|Date
+argument_list|()
+argument_list|,
+literal|"myartifact"
+argument_list|,
+literal|"mytype"
+argument_list|,
+literal|"myext"
+argument_list|)
+decl_stmt|;
+name|File
+name|src
+init|=
+operator|new
+name|File
+argument_list|(
+literal|"test/repositories/ivysettings.xml"
+argument_list|)
+decl_stmt|;
+name|resolver
+operator|.
+name|beginPublishTransaction
+argument_list|(
+name|mrid
+argument_list|,
+literal|false
+argument_list|)
+expr_stmt|;
+comment|// files should not be available until the transaction is committed
+name|resolver
+operator|.
+name|publish
+argument_list|(
+name|ivyArtifact
+argument_list|,
+name|src
+argument_list|,
+literal|false
+argument_list|)
+expr_stmt|;
+name|assertFalse
+argument_list|(
+operator|new
+name|File
+argument_list|(
+literal|"test/repositories/1/myorg/mymodule/mybranch/myrevision/ivy.xml"
+argument_list|)
+operator|.
+name|exists
+argument_list|()
+argument_list|)
+expr_stmt|;
+name|resolver
+operator|.
+name|publish
+argument_list|(
+name|artifact
+argument_list|,
+name|src
+argument_list|,
+literal|false
+argument_list|)
+expr_stmt|;
+name|assertFalse
+argument_list|(
+operator|new
+name|File
+argument_list|(
+literal|"test/repositories/1/myorg/mymodule/mybranch/myrevision/myartifact-myrevision.myext"
+argument_list|)
+operator|.
+name|exists
+argument_list|()
+argument_list|)
+expr_stmt|;
+name|resolver
+operator|.
+name|commitPublishTransaction
+argument_list|()
+expr_stmt|;
+name|assertTrue
+argument_list|(
+operator|new
+name|File
+argument_list|(
+literal|"test/repositories/1/myorg/mymodule/mybranch/myrevision/ivy.xml"
+argument_list|)
+operator|.
+name|exists
+argument_list|()
+argument_list|)
+expr_stmt|;
+name|assertTrue
+argument_list|(
+operator|new
+name|File
+argument_list|(
+literal|"test/repositories/1/myorg/mymodule/mybranch/myrevision/myartifact-myrevision.myext"
+argument_list|)
+operator|.
+name|exists
+argument_list|()
+argument_list|)
+expr_stmt|;
+block|}
+finally|finally
+block|{
+name|FileUtil
+operator|.
+name|forceDelete
+argument_list|(
+operator|new
+name|File
+argument_list|(
+literal|"test/repositories/1/myorg"
+argument_list|)
+argument_list|)
+expr_stmt|;
+block|}
+block|}
+specifier|public
+name|void
 name|testAbortTransaction
 parameter_list|()
 throws|throws
